--- a/episode1.html
+++ b/episode1.html
@@ -1,6 +1,14 @@
 <html>
 <head><script>
+(function(){
 
+
+window.onload = function() { 
+}
+
+
+
+})(window)
 </script></head>
 <body>
 <plaintext>
