ep 1: display engine v1

--- a/episode1.html
+++ b/episode1.html
@@ -8,7 +8,10 @@ plaintext { display: none; }
 body { white-space: pre; 
 	font-family: monospace; 
 	font-style: italic; 
-	font-size:2em;}
+	font-size:2em;
+	width: 90%;
+	margin: 0 auto;
+}
 </style><script>
 (function(){
 
@@ -22,6 +25,7 @@ window.onload = function() {
   this.hh = 0; // headerheight
   this.dh = 1; // dataheight
   this.idx = 0; // startindex
+  this.fps = 3;
 
 
   // globals
@@ -29,9 +33,9 @@ window.onload = function() {
   var reel = document.getElementsByClassName("reel")[0].innerText.split('\n');
   var scenes = [];
   var scene = '';
-  
-  /* to override any of the defaults on runtime, use metamarker above; *
-   * eg, override fps to 16 and frameheight to 4 with " _fps=16&fh=4"  */
+  var stagenotes = [];
+  /* to override any of the defaults on runtime, use metamarker on 1st line *
+   * eg, override fps to 16 and frameheight to 4 with " _fps=16&fh=4"       */
 
   if ( reel[0].substr(0,2) === ' _' ) { 
     // meta header detected!
@@ -45,20 +49,31 @@ window.onload = function() {
     }
   }
 
+  //sanity
+  this.fh = parseInt(this.fh);
+  this.dh = parseInt(this.dh);
+  this.hh = parseInt(this.hh);
+  this.fps = parseInt(this.fps);
+  
+  if ( dh + hh > fh ) fh=dh+hh;
+  else if ( dh + hh < fh ) dh=fh-hh;
+
+  if ( parseInt(this.fps) < 1 ) this.fps=1;
+
+  //grab the scenes
   for ( var i = idx, l = reel.length; i < l; i+=fh ) { 
-    if ( typeof reel[i+3] === 'undefined' ) break;
+    if ( typeof reel[i+(fh-1)] === 'undefined' ) break;
     scene = '';
-    scene += reel[i]+'\n';
-    scene += reel[i+1]+'\n';
-    scene += reel[i+2]+'\n';
-    scene += reel[i+3]+'\n';
+    for (var x = 0; x<fh; x++) {
+    	scene += reel[i+x]+'\n';
+    }
     scenes[scenes.length] = scene;
   }
   var cntr = 0;
   setInterval(function() { 
         if ( cntr >= scenes.length ) cntr=0;
 	document.body.innerText= scenes[cntr++];
-  },1000);
+  },(1000/this.fps));
 
   
 }
@@ -68,7 +83,7 @@ window.onload = function() {
 })(window)
 </script></head>
 <body>
-<plaintext class="reel"> _fh=4&hh=0&dh=4
+<plaintext class="reel"> _fh=1&hh=0&dh=4&fps=10
    
    . o /
     jl 
