--- a/dev.html
+++ b/dev.html
@@ -1,21 +1,7 @@
 <html>
-<head><title>
-. o /
- jl 
-</title>
-<style>
-plaintext { display: none; } 
-body { white-space: pre; 
-	font-family: monospace; 
-	font-style: italic; 
-	font-size:2em;
-	width: 90%;
-	margin: 0 auto;
-}
-</style><script src="aadventure.js"></script>
-</head>
+<head><title>. o /</title><link rel="stylesheet" href="ep1.css" /><script src="aadventure.js"></script></head>
 <body>
-<plaintext class="reel"> _fh=1&hh=0&dh=4&fps=1
+<plaintext class="reel"> _fh=1&hh=0&dh=4&fps=12
    
    .
      
